syntax = "proto3";

package com.cgi.eoss.eopp;

option java_package = "com.cgi.eoss.eopp.file";
option java_outer_classname = "FileProto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message FileMeta {
    string filename = 1;
    int64 size = 2;
    string checksum = 3;
    bool executable = 4;
    map<string, google.protobuf.Any> properties = 5;
}

message FileChunk {
    int64 position = 1;
    bytes data = 2;
}

message FileReference {
    string identifier = 1;
    string uri = 2;
    FileMeta metadata = 3;
}
